# djgpp-pthreads

./: CMakeLists.txt  README  build-djgpp-i586.sh  build-djgpp-i686.sh  build-djgpp-win.sh  djgpp-builder-v2.0.tar.gz:Zone.Identifier  djgpp_toolchain.cmake  mingw-w64.cmake
cmake/: BINUTILS_Stage1.cmake  BINUTILS_Stage2.cmake  BINUTILS_Stage3.cmake  DJCRX_Stage1.cmake  DJLSR_Stage2.cmake  DJLSR_Stage3.cmake  DownloadFile.cmake  DownloadZIP.cmake  GCC_Stage1.cmake  GCC_Stage2.cmake  GCC_Stage3.cmake  PTHREAD_Stage2.cmake  PTHREAD_Stage3.cmake  PTHSOCK_Stage2.cmake  PTHSOCK_Stage3.cmake
patches/: bnu244-coff_section_alignment.patch  djlsr205-gcc142-optional.patch  djlsr205-gcc142-pthreads.patch  djlsr205-gcc142-required.patch  djlsr205-gcc151-dxe3gen.patch  djlsr205-gcc151-infinity.patch  djlsr205-gcc151-libm.patch  djlsr205-gcc151-sortsyms.patch  djlsr205-gcc151-stdbool.patch  djlsr205-gcc151-texi2ps.patch  djlsr205-gcc152-go32.patch  djlsr205-gcc152-npxsetup.patch  djlsr205-gcc152-redir.patch  djlsr205-timespec.patch  dtoutod.patch  dxe3gen-fix-unquoted-macros.patch  gcc-14.2.0.patch  gcc151-limits.patch  gcc151-max_ofile_alignment.patch  gcc151-pth207.patch  gcc151-putwc.patch  gcc152-ops-common.patch  pth207s.patch  syserr.c  watt32s.patch  watt32s_stdbool.patch
